--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rockhound-go:-the-text-adventure",
+  "name": "rockhound-go",
   "private": true,
   "version": "0.0.0",
   "type": "module",
